// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-cJSrbW thUzP"
  >
    <h5
      class="sc-kgAjT cDHzLH"
    >
      Node Labels
    </h5>
    <div
      class="sc-ksYbfQ lldLOl"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-cJSrbW thUzP"
  >
    <h5
      class="sc-kgAjT cDHzLH"
    >
      Node Labels
    </h5>
    <div
      class="sc-ksYbfQ lldLOl"
    >
      <div
        class="sc-bxivhb sc-ifAKCX jbXaaz"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-bxivhb sc-ifAKCX jbXaaz"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-bxivhb sc-ifAKCX jbXaaz"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-cJSrbW thUzP"
  >
    <h5
      class="sc-kgAjT cDHzLH"
    >
      Property Keys
    </h5>
    <div
      class="sc-ksYbfQ lldLOl"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-cJSrbW thUzP"
  >
    <h5
      class="sc-kgAjT cDHzLH"
    >
      Property Keys
    </h5>
    <div
      class="sc-ksYbfQ lldLOl"
    >
      <div
        class="sc-bxivhb sc-bZQynM bVkwgH"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-bxivhb sc-bZQynM bVkwgH"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-cJSrbW thUzP"
  >
    <h5
      class="sc-kgAjT cDHzLH"
    >
      Relationship Types
    </h5>
    <div
      class="sc-ksYbfQ lldLOl"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-cJSrbW thUzP"
  >
    <h5
      class="sc-kgAjT cDHzLH"
    >
      Relationship Types
    </h5>
    <div
      class="sc-ksYbfQ lldLOl"
    >
      <div
        class="sc-bxivhb sc-EHOje FzefU"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-bxivhb sc-EHOje FzefU"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-bxivhb sc-EHOje FzefU"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
